# codex-fleet

./: .env.example  .envrc.example  .gitignore  AGENTS.md  CONTRIBUTING.md  DESIGN.md  LICENSE  Makefile  PRODUCT.md  README.md  WORKFLOW.md  package.json  pyproject.toml
.codex/: config.toml
docker/: README.md  codex-fleet.Dockerfile  compose.yml
docs/: agent-orchestration.md  ai-workflow.md  architecture.md  brand.md  codex-handoff.md  completion-audit.md  dev-environment.md  harness-engine.md  local-api.md  local-testing.md  one-command.md  plane-fork.md  plane-setup.md  product-design.md  product-plan.md  run-the-app.md  security.md  token-policy.md
examples/: codex-fleet.memory.yml  codex-fleet.plane.yml
patches/: plane-codex-fleet.patch
scripts/: codex-fleet-npx.js  harness-check  plane-fork-clone  plane-up  test-local  up
tests/: test_app_server_runner.py  test_brand_assets.py  test_budget.py  test_capture.py  test_cli_plane.py  test_codex_cli_runner.py  test_codex_protocol.py  test_config.py  test_context_pack.py  test_daemon.py  test_doctor.py  test_factory.py  test_folder_picker.py  test_github.py  test_harness.py  test_lifecycle.py  test_local_api.py  test_local_ui.py  test_local_work_items.py  test_node_launcher.py  test_orchestrator.py  test_plane.py  test_plane_bootstrap.py  test_plane_local_bootstrap.py  test_plane_manager.py  test_plane_preview.py  test_plane_views.py  test_planner.py  test_pr_flow.py  test_project_reconcile.py  test_project_registry.py  test_prompt_protocol.py  test_store.py  test_test_proof.py  test_token_skill.py  (+3 more)
(+125 files in other folders)
