[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "codex-fleet"
version = "0.1.0"
description = "Local control plane for Codex agent fleets using Plane and Symphony-style orchestration."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "codex-fleet contributors" }]
keywords = ["codex", "agents", "plane", "orchestration", "worktrees", "automation"]
dependencies = [
  "click>=8.1",
  "pydantic>=2.7",
  "httpx>=0.27",
  "rich>=13.7",
  "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2",
  "pytest-cov>=5.0",
  "ruff>=0.6",
  "mypy>=1.10",
]

[project.scripts]
codex-fleet = "codex_fleet.cli.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/codex_fleet"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true
packages = ["codex_fleet"]
